# example3dapp

./: CMakeLists.txt  Readme.md
data/: crl_icon.xcf
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  shader.h  vertex_shader.glsl
src/gui/: CMakeLists.txt  camera.h  camera_drag.h  mesh.h  model.h  shader_m.h
src/gui/shaders/: 2.2.basic_lighting.fs
